[project]
name = "login-network-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "langchain>=0.3.17",
    "langchain-openai>=0.3.3",
    "langchain-community>=0.3.16",
    "langgraph>=0.2.69",
    "chromadb>=0.6.3",
    "pandas>=2.2.3",
    "pre-commit>=4.1.0",
    "ipython>=8.32.0",
    "streamlit>=1.42.0",
]

[tool.black]
target-version = ['py313']
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''
preview = true

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "dist"]
max-complexity = 10

[tool.isort]
atomic = true
